feat: Introduce a web-based bootstrap wizard and new intelligence service, replacing the old `docker-compose.memu.yml` setup.

--- a/docker-compose.pi-patch.yml
+++ b/docker-compose.pi-patch.yml
@@ -6,7 +6,7 @@ services:
     container_name: Memu_intelligence
     restart: unless-stopped
     networks:
-      - hearth
+      - default
     environment:
       - DB_HOST=postgres
       - DB_PORT=5432
