--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,45 @@
 name: memu-suite
 
+# Memu: Family Digital Infrastructure
+# This stack runs: Chat (Matrix), Photos (Immich), AI (Ollama)
+# All services share one database and communicate over a private network
+
 services:
-  memu_postgres:
+  # === CORE INFRASTRUCTURE ===
+
+  database:
     container_name: memu_postgres
     image: postgres:15-alpine
     environment:
-      POSTGRES_DB: ${DB_NAME:-immich}
-      POSTGRES_USER: ${DB_USER:-memu_user}
+      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_INITDB_ARGS: --encoding=UTF8 --lc-collate=C --lc-ctype=C
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-memu_user} -d ${DB_NAME:-immich}"]
+      test: [ "CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}" ]
       interval: 10s
       timeout: 5s
       retries: 5
     volumes:
-      - memu-suite_pgdata:/var/lib/postgresql/data
+      - pgdata:/var/lib/postgresql/data
     restart: unless-stopped
     networks:
-      default:
-        aliases:
-          - postgres
+      - memu_net
 
-  memu_synapse:
+  cache:
+    container_name: memu_redis
+    image: redis:6.2-alpine
+    restart: unless-stopped
+    healthcheck:
+      test: [ "CMD-SHELL", "redis-cli ping || exit 1" ]
+    volumes:
+      - redisdata:/data
+    networks:
+      - memu_net
+
+  # === CHAT SERVICES ===
+
+  synapse:
     container_name: memu_synapse
     image: matrixdotorg/synapse:latest
     ports:
@@ -30,16 +47,16 @@ services:
     volumes:
       - ./synapse:/data
     environment:
-      - SYNAPSE_SERVER_NAME=${SERVER_NAME:-memu.local}
+      - SYNAPSE_SERVER_NAME=${SERVER_NAME}
       - SYNAPSE_REPORT_STATS=no
     depends_on:
-      memu_postgres:
+      database:
         condition: service_healthy
     restart: unless-stopped
     networks:
-      - default
+      - memu_net
 
-  memu_element:
+  element:
     container_name: memu_element
     image: vectorim/element-web:latest
     ports:
@@ -48,9 +65,106 @@ services:
       - ./element-config.json:/app/config.json
     restart: unless-stopped
     networks:
-      - default
+      - memu_net
 
-  memu_tunnel:
+  # === PHOTO SERVICES (IMMICH) ===
+
+  immich_server:
+    container_name: memu_photos
+    image: ghcr.io/immich-app/immich-server:${IMMICH_VERSION}
+    command: [ "start.sh", "immich" ]
+    restart: unless-stopped
+    volumes:
+      - ${UPLOAD_LOCATION}:/usr/src/app/upload
+      - /etc/localtime:/etc/localtime:ro
+    environment:
+      - DB_HOSTNAME=database
+      - DB_USERNAME=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_DATABASE_NAME=${DB_NAME}
+      - REDIS_HOSTNAME=cache
+    depends_on:
+      - cache
+      - database
+    ports:
+      - "2283:3001"
+    networks:
+      - memu_net
+
+  immich_workers:
+    container_name: memu_photos_workers
+    image: ghcr.io/immich-app/immich-server:${IMMICH_VERSION}
+    command: [ "start.sh", "microservices" ]
+    restart: unless-stopped
+    volumes:
+      - ${UPLOAD_LOCATION}:/usr/src/app/upload
+      - /etc/localtime:/etc/localtime:ro
+    environment:
+      - DB_HOSTNAME=database
+      - DB_USERNAME=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_DATABASE_NAME=${DB_NAME}
+      - REDIS_HOSTNAME=cache
+    depends_on:
+      - cache
+      - database
+    networks:
+      - memu_net
+
+  immich_ml:
+    container_name: memu_photos_ml
+    image: ghcr.io/immich-app/immich-machine-learning:${IMMICH_VERSION}
+    volumes:
+      - model_cache:/cache
+    environment:
+      - MACHINE_LEARNING_WORKERS=${MACHINE_LEARNING_WORKERS}
+      - MACHINE_LEARNING_WORKER_TIMEOUT=${MACHINE_LEARNING_WORKER_TIMEOUT}
+    restart: unless-stopped
+    networks:
+      - memu_net
+
+  # === AI SERVICES ===
+
+  ollama:
+    container_name: memu_brain
+    image: ollama/ollama:latest
+    restart: unless-stopped
+    volumes:
+      - ollama_data:/root/.ollama
+    ports:
+      - "11434:11434"
+    environment:
+      - OLLAMA_KEEP_ALIVE=24h
+    networks:
+      - memu_net
+
+  intelligence:
+    container_name: memu_intelligence
+    build:
+      context: ./services/intelligence
+      dockerfile: dockerfile
+    environment:
+      - DB_HOST=database
+      - DB_NAME=${DB_NAME}
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - OLLAMA_HOST=http://ollama:11434
+      - AI_ENABLED=${AI_ENABLED}
+      - MATRIX_HOMESERVER_URL=http://synapse:8008
+      - MATRIX_BOT_TOKEN=${MATRIX_BOT_TOKEN}
+      - MATRIX_BOT_USERNAME=${MATRIX_BOT_USERNAME}
+    depends_on:
+      database:
+        condition: service_healthy
+      synapse:
+        condition: service_started
+    restart: unless-stopped
+    networks:
+      - memu_net
+
+  # === NETWORK (TEMPORARY - SEE ISSUE #1) ===
+
+  tunnel:
     container_name: memu_tunnel
     image: cloudflare/cloudflared:latest
     restart: unless-stopped
@@ -58,34 +172,14 @@ services:
     environment:
       - TUNNEL_TOKEN=${CLOUDFLARED_TOKEN}
     networks:
-      - default
+      - memu_net
+    # NOTE: Cloudflare Tunnel violates ToS for video streaming
+    # This is temporary until we switch to Headscale/Tailscale
+    # See: https://github.com/yourusername/memu/issues/1
 
-  memu_intelligence:
-    container_name: memu_intelligence
-    build:
-      context: ./services/intelligence
-      dockerfile: dockerfile
-    environment:
-      - DB_HOST=memu_postgres
-      - DB_NAME=${DB_NAME:-immich}
-      - DB_USER=${DB_USER:-memu_user}
-      - DB_PASSWORD=${DB_PASSWORD}
-      - OLLAMA_HOST=http://memu_brain:11434
-      - AI_ENABLED=${AI_ENABLED:-true}
-      - MATRIX_HOMESERVER_URL=http://memu_synapse:8008
-      - MATRIX_BOT_TOKEN=${MATRIX_BOT_TOKEN}
-    volumes:
-      - ./services/intelligence:/app
-    depends_on:
-      memu_postgres:
-        condition: service_healthy
-      memu_synapse:
-        condition: service_started
-    restart: unless-stopped
-    networks:
-      - default
+    # === ROUTING ===
 
-  memu_proxy:
+  proxy:
     container_name: memu_proxy
     image: nginx:alpine
     ports:
@@ -93,102 +187,18 @@ services:
     volumes:
       - ./nginx/conf.d:/etc/nginx/conf.d:ro
     depends_on:
-      - memu_element
-      - memu_synapse
+      - element
+      - synapse
     restart: unless-stopped
     networks:
-      default:
-        aliases:
-          - nginx
-
-  # Photos (Immich stack)
-  memu_photos_server:
-    container_name: memu_photos_server
-    image: ghcr.io/immich-app/immich-server:release
-    command: ["start.sh", "immich"]
-    restart: unless-stopped
-    volumes:
-      - ${UPLOAD_LOCATION:-./photos}:/usr/src/app/upload
-      - /etc/localtime:/etc/localtime:ro
-    environment:
-      - DB_HOSTNAME=memu_postgres
-      - DB_USERNAME=${DB_USER:-memu_user}
-      - DB_PASSWORD=${DB_PASSWORD}
-      - DB_DATABASE_NAME=${DB_NAME:-immich}
-      - REDIS_HOSTNAME=memu_redis
-    depends_on:
-      - memu_redis
-      - memu_postgres
-    ports:
-      - "2283:3001"
-    networks:
-      - default
-
-  memu_photos_workers:
-    container_name: memu_photos_workers
-    image: ghcr.io/immich-app/immich-server:release
-    command: ["start.sh", "microservices"]
-    restart: unless-stopped
-    volumes:
-      - ${UPLOAD_LOCATION:-./photos}:/usr/src/app/upload
-      - /etc/localtime:/etc/localtime:ro
-    environment:
-      - DB_HOSTNAME=memu_postgres
-      - DB_USERNAME=${DB_USER:-memu_user}
-      - DB_PASSWORD=${DB_PASSWORD}
-      - DB_DATABASE_NAME=${DB_NAME:-immich}
-      - REDIS_HOSTNAME=memu_redis
-    depends_on:
-      - memu_redis
-      - memu_postgres
-    networks:
-      - default
-
-  memu_photos_ml:
-    container_name: memu_photos_ml
-    image: ghcr.io/immich-app/immich-machine-learning:release
-    volumes:
-      - model-cache:/cache
-    environment:
-      - MACHINE_LEARNING_WORKERS=1
-      - MACHINE_LEARNING_WORKER_TIMEOUT=120
-    restart: unless-stopped
-    networks:
-      - default
-
-  memu_redis:
-    container_name: memu_redis
-    image: redis:6.2-alpine
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD-SHELL", "redis-cli ping || exit 1"]
-    volumes:
-      - redisdata:/data
-    networks:
-      - default
-
-  memu_brain:
-    container_name: memu_brain
-    image: ollama/ollama:latest
-    restart: unless-stopped
-    volumes:
-      - memu-suite_ollama_data:/root/.ollama
-    ports:
-      - "11434:11434"
-    environment:
-      - OLLAMA_KEEP_ALIVE=24h
-    networks:
-      - default
+      - memu_net
 
 networks:
-  default:
-    name: memu-suite_default
+  memu_net:
     driver: bridge
 
 volumes:
-  memu-suite_pgdata:
-    external: true
-  memu-suite_ollama_data:
-    external: true
+  pgdata:
   redisdata:
-  model-cache:
+  model_cache:
+  ollama_data:
