--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ SERVER_NAME=memu.local
 TZ=Etc/UTC
 
 # --- DATABASE CREDENTIALS ---
-DB_USER=memu
+DB_USER=memu_user
 DB_PASSWORD=change_this_to_a_secure_password
 
 # --- PHOTOS (IMMICH) CONFIGURATION ---
