--- a/docker-compose.pi-patch.yml
+++ b/docker-compose.pi-patch.yml
@@ -8,7 +8,7 @@ services:
     networks:
       - default
     environment:
-      - DB_HOST=postgres
+      - DB_HOST=database
       - DB_PORT=5432
       - DB_NAME=${DB_NAME}
       - DB_USER=${DB_USER}
