chore: prepare for open source release (v3.1)

--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ DB_PASSWORD=change_this_to_a_secure_password
 
 # --- PHOTOS (IMMICH) CONFIGURATION ---
 UPLOAD_LOCATION=./photos
-IMMICH_VERSION=release
+
 
 # --- CHAT (MATRIX/SYNAPSE) CONFIGURATION ---
 SYNAPSE_REPORT_STATS=no
@@ -24,8 +24,8 @@ SYNAPSE_REPORT_STATS=no
 MATRIX_BOT_USERNAME=@memu_bot:memu.local
 MATRIX_BOT_TOKEN=change_this_to_your_bot_token
 
-# --- NETWORKING (CLOUDFLARED) ---
-CLOUDFLARED_TOKEN=
+# --- NETWORKING (TAILSCALE) ---
+TAILSCALE_AUTH_KEY=tskey-auth-starting-with-tskey
 
 # --- SAFETY & AI ---
 MACHINE_LEARNING_WORKERS=1
