--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ name: memu-suite
 
 # Memu: Family Digital Infrastructure
 # This stack runs: Chat (Matrix), Photos (Immich), AI (Ollama)
-# All services share one database and communicate over a private network
+#
+# IMPORTANT: This file expects config files to exist before containers start.
+# Run the setup wizard first, or use install.sh which handles this.
 
 services:
   # === CORE INFRASTRUCTURE ===
@@ -11,17 +13,22 @@ services:
     container_name: memu_postgres
     image: tensorchord/pgvecto-rs:pg15-v0.2.0
     environment:
-      POSTGRES_DB: ${DB_NAME}
-      POSTGRES_USER: ${DB_USER}
+      # Note: POSTGRES_DB creates ONE database. We create additional databases
+      # via the setup wizard (memu_synapse, memu_immich)
+      POSTGRES_DB: ${DB_NAME:-immich}
+      POSTGRES_USER: ${DB_USER:-memu_user}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_INITDB_ARGS: --encoding=UTF8 --lc-collate=C --lc-ctype=C
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}" ]
+      test: [ "CMD-SHELL", "pg_isready -U ${DB_USER:-memu_user} -d ${DB_NAME:-immich}" ]
       interval: 10s
       timeout: 5s
       retries: 5
+      start_period: 30s
     volumes:
       - pgdata:/var/lib/postgresql/data
+      # Optional: mount init scripts for additional database setup
+      # - ./scripts/init_memory.sql:/docker-entrypoint-initdb.d/init_memory.sql:ro
     restart: unless-stopped
     networks:
       - memu_net
@@ -32,6 +39,9 @@ services:
     restart: unless-stopped
     healthcheck:
       test: [ "CMD-SHELL", "redis-cli ping || exit 1" ]
+      interval: 10s
+      timeout: 5s
+      retries: 3
     volumes:
       - redisdata:/data
     networks:
@@ -47,11 +57,17 @@ services:
     volumes:
       - ./synapse:/data
     environment:
-      - SYNAPSE_SERVER_NAME=${SERVER_NAME}
+      - SYNAPSE_SERVER_NAME=${SERVER_NAME:-memu.local}
       - SYNAPSE_REPORT_STATS=no
     depends_on:
       database:
         condition: service_healthy
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:8008/_matrix/client/versions" ]
+      interval: 15s
+      timeout: 10s
+      retries: 5
+      start_period: 60s
     restart: unless-stopped
     networks:
       - memu_net
@@ -62,7 +78,9 @@ services:
     ports:
       - "8080:80"
     volumes:
-      - ./element-config.json:/app/config.json
+      # IMPORTANT: This file MUST exist before the container starts
+      # The install script creates a placeholder; the wizard updates it
+      - ./element-config.json:/app/config.json:ro
     restart: unless-stopped
     networks:
       - memu_net
@@ -75,17 +93,26 @@ services:
     command: [ "start.sh", "immich" ]
     restart: unless-stopped
     volumes:
-      - ${UPLOAD_LOCATION}:/usr/src/app/upload
+      - ${UPLOAD_LOCATION:-./photos}:/usr/src/app/upload
       - /etc/localtime:/etc/localtime:ro
     environment:
       - DB_HOSTNAME=database
-      - DB_USERNAME=${DB_USER}
+      - DB_USERNAME=${DB_USER:-memu_user}
       - DB_PASSWORD=${DB_PASSWORD}
-      - DB_DATABASE_NAME=${DB_NAME}
+      # Immich uses its own database (created by wizard)
+      - DB_DATABASE_NAME=${DB_NAME:-immich}
       - REDIS_HOSTNAME=cache
     depends_on:
-      - cache
-      - database
+      database:
+        condition: service_healthy
+      cache:
+        condition: service_healthy
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:3001/api/server-info/ping" ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 60s
     ports:
       - "2283:3001"
     networks:
@@ -97,17 +124,19 @@ services:
     command: [ "start.sh", "microservices" ]
     restart: unless-stopped
     volumes:
-      - ${UPLOAD_LOCATION}:/usr/src/app/upload
+      - ${UPLOAD_LOCATION:-./photos}:/usr/src/app/upload
       - /etc/localtime:/etc/localtime:ro
     environment:
       - DB_HOSTNAME=database
-      - DB_USERNAME=${DB_USER}
+      - DB_USERNAME=${DB_USER:-memu_user}
       - DB_PASSWORD=${DB_PASSWORD}
-      - DB_DATABASE_NAME=${DB_NAME}
+      - DB_DATABASE_NAME=${DB_NAME:-immich}
       - REDIS_HOSTNAME=cache
     depends_on:
-      - cache
-      - database
+      database:
+        condition: service_healthy
+      cache:
+        condition: service_healthy
     networks:
       - memu_net
 
@@ -117,8 +146,8 @@ services:
     volumes:
       - model_cache:/cache
     environment:
-      - MACHINE_LEARNING_WORKERS=${MACHINE_LEARNING_WORKERS}
-      - MACHINE_LEARNING_WORKER_TIMEOUT=${MACHINE_LEARNING_WORKER_TIMEOUT}
+      - MACHINE_LEARNING_WORKERS=${MACHINE_LEARNING_WORKERS:-1}
+      - MACHINE_LEARNING_WORKER_TIMEOUT=${MACHINE_LEARNING_WORKER_TIMEOUT:-120}
     restart: unless-stopped
     networks:
       - memu_net
@@ -145,11 +174,11 @@ services:
       dockerfile: Dockerfile
     environment:
       - DB_HOST=database
-      - DB_NAME=${DB_NAME}
-      - DB_USER=${DB_USER}
+      - DB_NAME=${DB_NAME:-immich}
+      - DB_USER=${DB_USER:-memu_user}
       - DB_PASSWORD=${DB_PASSWORD}
       - OLLAMA_HOST=http://ollama:11434
-      - AI_ENABLED=${AI_ENABLED}
+      - AI_ENABLED=${AI_ENABLED:-true}
       - MATRIX_HOMESERVER_URL=http://synapse:8008
       - MATRIX_BOT_TOKEN=${MATRIX_BOT_TOKEN}
       - MATRIX_BOT_USERNAME=${MATRIX_BOT_USERNAME}
@@ -157,12 +186,12 @@ services:
       database:
         condition: service_healthy
       synapse:
-        condition: service_started
+        condition: service_healthy
     restart: unless-stopped
     networks:
       - memu_net
 
-  # === NETWORK (TEMPORARY - SEE ISSUE #1) ===
+  # === NETWORK (TAILSCALE) ===
 
   tailscale:
     container_name: memu_tailscale
@@ -172,6 +201,8 @@ services:
       - TS_AUTHKEY=${TAILSCALE_AUTH_KEY}
       - TS_STATE_DIR=/var/lib/tailscale
       - TS_USERSPACE=false
+      # Accept DNS to enable MagicDNS
+      - TS_EXTRA_ARGS=--accept-dns=true
     volumes:
       - tailscale_data:/var/lib/tailscale
       - /dev/net/tun:/dev/net/tun
@@ -181,7 +212,8 @@ services:
     restart: unless-stopped
     networks:
       - memu_net
-    # === ROUTING ===
+
+  # === ROUTING (NGINX) ===
 
   proxy:
     container_name: memu_proxy
@@ -189,10 +221,16 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./nginx/conf.d:/etc/nginx/conf.d:ro
+      # IMPORTANT: Config file must exist before container starts
+      # - ./nginx/conf.d:/etc/nginx/conf.d:ro
     depends_on:
       - element
       - synapse
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost/" ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
     restart: unless-stopped
     networks:
       - memu_net
