fix: security hardening in docker compose so services are not directly accessible from the public internet

--- a/nginx-default.conf
+++ b/nginx-default.conf
@@ -1,19 +1,42 @@
+# =============================================================================
+# Memu Nginx Configuration
+# =============================================================================
+# This proxy routes all external traffic to internal services.
+# No backend service is directly exposed to the internet.
+#
+# Routes:
+#   /              -> Element (Chat UI)
+#   /_matrix       -> Synapse (Matrix API)
+#   /_synapse      -> Synapse (Admin/Client APIs)
+#   /api           -> Immich (Photos API) - for mobile apps
+#   /photos        -> Immich (Photos Web UI)
+#
+# Access:
+#   Local:  http://localhost
+#   Remote: http://memu-hub (via Tailscale)
+# =============================================================================
+
 server {
     listen 80;
     server_name localhost;
 
-    # Proxy to Element (Chat UI)
+    # Use Docker's internal DNS resolver
+    resolver 127.0.0.11 valid=30s;
+
+    # Default: Element (Chat UI)
     location / {
-        proxy_pass http://memu_element:80;
+        set $upstream_element http://memu_element:80;
+        proxy_pass $upstream_element;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Proxy to Synapse (Matrix Server)
+    # Matrix Client API
     location /_matrix {
-        proxy_pass http://memu_synapse:8008;
+        set $upstream_synapse http://memu_synapse:8008;
+        proxy_pass $upstream_synapse;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -21,12 +44,51 @@ server {
         client_max_body_size 50M;
     }
 
+    # Synapse Admin/Client APIs
     location /_synapse/client {
-        proxy_pass http://memu_synapse:8008;
+        set $upstream_synapse http://memu_synapse:8008;
+        proxy_pass $upstream_synapse;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         client_max_body_size 50M;
     }
+
+    # Matrix Server Discovery (for federation, if ever enabled)
+    location /.well-known/matrix/server {
+        return 200 '{"m.server": "$host:80"}';
+        add_header Content-Type application/json;
+    }
+
+    location /.well-known/matrix/client {
+        return 200 '{"m.homeserver": {"base_url": "http://$host"}}';
+        add_header Content-Type application/json;
+        add_header Access-Control-Allow-Origin *;
+    }
+
+    # ==========================================================================
+    # IMMICH (Photos) - Optional proxy route
+    # ==========================================================================
+    # NOTE: Immich mobile apps connect directly to port 2283.
+    # This proxy route is for web browser access only.
+    # 
+    # Since we bound Immich to 127.0.0.1:2283, users access photos via:
+    #   - Local: http://localhost:2283
+    #   - Remote: http://memu-hub:2283 (Tailscale routes to the host)
+    #
+    # The /photos route below is OPTIONAL - for accessing via main domain.
+    # Uncomment if you want http://memu-hub/photos to work.
+    # ==========================================================================
+    
+    # location /photos {
+    #     set $upstream_immich http://memu_photos:3001;
+    #     rewrite ^/photos(.*)$ $1 break;
+    #     proxy_pass $upstream_immich;
+    #     proxy_set_header Host $host;
+    #     proxy_set_header X-Real-IP $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #     proxy_set_header X-Forwarded-Proto $scheme;
+    #     client_max_body_size 0;  # No limit for photo uploads
+    # }
 }
