--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,21 @@
 name: memu-suite
 
+# =============================================================================
 # Memu: Family Digital Infrastructure
+# =============================================================================
 # This stack runs: Chat (Matrix), Photos (Immich), AI (Ollama)
+#
+# SECURITY MODEL:
+# - All services communicate via internal Docker network (memu_net)
+# - Only the Nginx proxy (port 80) is exposed to external networks
+# - Backend services are bound to 127.0.0.1 for debugging only
+# - Remote access is via Tailscale (encrypted, authenticated)
+#
+# Access paths:
+#   Local:     http://localhost or http://memu.local
+#   Remote:    http://memu-hub (via Tailscale)
+#   Photos:    http://localhost/photos or http://memu-hub:2283
+# =============================================================================
 
 services:
   # === CORE INFRASTRUCTURE ===
@@ -25,6 +39,7 @@ services:
     restart: unless-stopped
     networks:
       - memu_net
+    # NOTE: No ports exposed - database is internal only
 
   cache:
     container_name: memu_redis
@@ -39,14 +54,14 @@ services:
       - redisdata:/data
     networks:
       - memu_net
+    # NOTE: No ports exposed - cache is internal only
 
-  # === CHAT SERVICES ===
+    # === CHAT SERVICES ===
 
   synapse:
     container_name: memu_synapse
-    image: matrixdotorg/synapse:v1.98.0
-    ports:
-      - "8008:8008"
+    # Updated from v1.98.0 to recent stable
+    image: matrixdotorg/synapse:v1.121.0
     volumes:
       - ./synapse:/data
     environment:
@@ -64,23 +79,31 @@ services:
     restart: unless-stopped
     networks:
       - memu_net
+    # SECURITY: Port removed - access via Nginx proxy only
+    # For local debugging: uncomment the line below
+    # ports:
+    #   - "127.0.0.1:8008:8008"
 
   element:
     container_name: memu_element
-    image: vectorim/element-web:v1.11.52
-    ports:
-      - "8080:80"
+    # Updated to recent stable
+    image: vectorim/element-web:v1.11.85
     volumes:
       - ./element-config.json:/app/config.json:ro
     restart: unless-stopped
     networks:
       - memu_net
+    # SECURITY: Port removed - access via Nginx proxy only
+    # For local debugging: uncomment the line below
+    # ports:
+    #   - "127.0.0.1:8080:80"
 
-  # === PHOTO SERVICES (IMMICH) ===
+    # === PHOTO SERVICES (IMMICH) ===
 
   immich_server:
     container_name: memu_photos
-    image: ghcr.io/immich-app/immich-server:v1.95.0
+    # Updated to recent stable
+    image: ghcr.io/immich-app/immich-server:v1.124.0
     command: [ "start.sh", "immich" ]
     restart: unless-stopped
     volumes:
@@ -103,14 +126,18 @@ services:
       timeout: 10s
       retries: 3
       start_period: 60s
-    ports:
-      - "2283:3001"
     networks:
       - memu_net
+    # SECURITY: Bound to localhost only - not accessible from public internet
+    # Access via Tailscale: http://memu-hub:2283
+    # This port IS needed for Immich mobile apps to connect
+    ports:
+      - "127.0.0.1:2283:3001"
 
   immich_workers:
     container_name: memu_photos_workers
-    image: ghcr.io/immich-app/immich-server:v1.95.0
+    # Updated to match immich_server version
+    image: ghcr.io/immich-app/immich-server:v1.124.0
     command: [ "start.sh", "microservices" ]
     restart: unless-stopped
     volumes:
@@ -129,10 +156,12 @@ services:
         condition: service_healthy
     networks:
       - memu_net
+    # NOTE: No ports - workers are internal only
 
   immich_ml:
     container_name: memu_photos_ml
-    image: ghcr.io/immich-app/immich-machine-learning:v1.95.0
+    # Updated to match immich_server version
+    image: ghcr.io/immich-app/immich-machine-learning:v1.124.0
     volumes:
       - model_cache:/cache
     environment:
@@ -141,21 +170,26 @@ services:
     restart: unless-stopped
     networks:
       - memu_net
+    # NOTE: No ports - ML service is internal only
 
-  # === AI SERVICES ===
+    # === AI SERVICES ===
 
   ollama:
     container_name: memu_brain
-    image: ollama/ollama:0.1.27
+    # Updated from 0.1.27 to recent stable
+    image: ollama/ollama:0.5.4
     restart: unless-stopped
     volumes:
       - ollama_data:/root/.ollama
-    ports:
-      - "11434:11434"
     environment:
       - OLLAMA_KEEP_ALIVE=24h
     networks:
       - memu_net
+    # SECURITY: Bound to localhost only - not accessible from public internet
+    # The intelligence service connects via internal Docker network
+    # For local debugging: uncomment to access Ollama API directly
+    # ports:
+    #   - "127.0.0.1:11434:11434"
 
   intelligence:
     container_name: memu_intelligence
@@ -180,8 +214,9 @@ services:
     restart: unless-stopped
     networks:
       - memu_net
+    # NOTE: No ports - bot communicates via Matrix protocol
 
-  # === NETWORK (TAILSCALE) ===
+    # === NETWORK (TAILSCALE) ===
 
   tailscale:
     container_name: memu_tailscale
@@ -201,16 +236,15 @@ services:
     restart: unless-stopped
     networks:
       - memu_net
+    # NOTE: Tailscale creates its own encrypted tunnel - no ports needed
+    # TODO (v1.0): Consider using Docker secrets for TS_AUTHKEY
 
-  # === ROUTING (NGINX) ===
+    # === ROUTING (NGINX) ===
 
   proxy:
     container_name: memu_proxy
-    image: nginx:1.25-alpine
-    ports:
-      - "80:80"
+    image: nginx:1.27-alpine
     volumes:
-      # FIXED: Uncommented and pointing to the file created by install.sh/wizard
       - ./nginx/conf.d:/etc/nginx/conf.d:ro
     depends_on:
       - element
@@ -223,6 +257,10 @@ services:
     restart: unless-stopped
     networks:
       - memu_net
+    # SECURITY: This is the ONLY externally accessible port
+    # All HTTP traffic enters through Nginx and is routed internally
+    ports:
+      - "80:80"
 
 networks:
   memu_net:
