feature: backup system and associated ocumentation

--- a/.env.example
+++ b/.env.example
@@ -31,4 +31,9 @@ MATRIX_BOT_TOKEN=
 # --- REMOTE ACCESS ---
 # Get a key from https://login.tailscale.com/admin/settings/keys
 TAILSCALE_AUTH_KEY=
-```
+
+# --- BACKUP ---
+# Directory where backups are stored
+BACKUP_DIR=./backups
+# Number of local backups to keep (older ones are pruned)
+BACKUP_RETENTION_COUNT=7
