--- a/services/intelligence/requirements.txt
+++ b/services/intelligence/requirements.txt
@@ -7,12 +7,11 @@ asyncpg==0.29.0
 # HTTP client for Ollama (Async support)
 httpx==0.25.2
 
+# HTTP client for Matrix Search API (Async)
+aiohttp==3.9.1
+
 # Date parsing
 dateparser==1.2.0
 
 # Environment variables
 python-dotenv==1.0.0
-
-# Testing
-pytest==8.0.0
-pytest-asyncio==0.23.0
