fix:immich worker vs server issue

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -103,6 +103,7 @@ services:
     container_name: memu_photos
     # Updated to recent stable
     image: ghcr.io/immich-app/immich-server:v1.124.0
+    command: [ "immich" ]
     restart: unless-stopped
     volumes:
       - ${UPLOAD_LOCATION:-./photos}:/usr/src/app/upload
@@ -136,6 +137,7 @@ services:
     container_name: memu_photos_workers
     # Updated to match immich_server version
     image: ghcr.io/immich-app/immich-server:v1.124.0
+    command: [ "microservices" ]
     restart: unless-stopped
     volumes:
       - ${UPLOAD_LOCATION:-./photos}:/usr/src/app/upload
