--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -103,7 +103,7 @@ services:
     container_name: memu_photos
     # Updated to recent stable
     image: ghcr.io/immich-app/immich-server:v1.124.0
-    command: [ "immich" ]
+    command: [ "start.sh", "immich" ]
     restart: unless-stopped
     volumes:
       - ${UPLOAD_LOCATION:-./photos}:/usr/src/app/upload
@@ -137,7 +137,7 @@ services:
     container_name: memu_photos_workers
     # Updated to match immich_server version
     image: ghcr.io/immich-app/immich-server:v1.124.0
-    command: [ "microservices" ]
+    command: [ "start.sh", "microservices" ]
     restart: unless-stopped
     volumes:
       - ${UPLOAD_LOCATION:-./photos}:/usr/src/app/upload
@@ -271,3 +271,5 @@ volumes:
   model_cache:
   ollama_data:
   tailscale_data:
+
+
