--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -3,6 +3,13 @@ server {
     server_name localhost;
     resolver 127.0.0.11 valid=30s;
 
+    # === Static Assets (Logo, Images) ===
+    location /assets/ {
+        alias /usr/share/nginx/assets/;
+        expires 7d;
+        add_header Cache-Control "public, immutable";
+    }
+
     # === Admin & Setup Routes (Bootstrap Service) ===
     # These need to go to the bootstrap container on port 8888
     location ~ ^/(admin|login|logout|welcome|api|status|static) {
@@ -21,6 +28,26 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Host $host;
         client_max_body_size 50M;
+    }
+
+    # === Calendar (Baikal CalDAV) ===
+    location /calendar/ {
+        set $upstream_calendar http://calendar:80;
+        rewrite ^/calendar(/.*)$ $1 break;
+        proxy_pass $upstream_calendar;
+        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Host $host;
+        client_max_body_size 50M;
+    }
+
+    # CalDAV/CardDAV discovery (iOS, macOS, Thunderbird)
+    location /.well-known/caldav {
+        return 301 $scheme://$host/calendar/dav.php;
+    }
+
+    location /.well-known/carddav {
+        return 301 $scheme://$host/calendar/dav.php;
     }
 
     # === Main Element UI (Default Fallback) ===
