--- a/services/intelligence/requirements.txt
+++ b/services/intelligence/requirements.txt
@@ -13,5 +13,13 @@ aiohttp==3.9.1
 # Date parsing
 dateparser==1.2.0
 
+# Calendar (CalDAV)
+caldav==1.3.9
+icalendar==5.0.11
+tzlocal==5.2
+
+# Scheduler (for morning briefings)
+apscheduler==3.10.4
+
 # Environment variables
 python-dotenv==1.0.0
