--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -110,8 +110,8 @@ services:
 
   element:
     container_name: memu_element
-    # Updated to recent stable
-    image: vectorim/element-web:v1.11.85
+    # v1.11.85 has a circular-dependency crash in WidgetStore init
+    image: vectorim/element-web:v1.11.78
     volumes:
       - ./element-config.json:/app/config.json:ro
     restart: unless-stopped
