--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -228,7 +228,7 @@ services:
       - MATRIX_HOMESERVER_URL=http://synapse:8008
       - MATRIX_BOT_TOKEN=${MATRIX_BOT_TOKEN}
       - MATRIX_BOT_USERNAME=${MATRIX_BOT_USERNAME}
-      - OLLAMA_MODEL=${OLLAMA_MODEL:-ministral:3b}
+      - OLLAMA_MODEL=${OLLAMA_MODEL:-llama3.2}
       - CALDAV_URL=http://calendar/dav.php
       - CALDAV_USERNAME=${CALDAV_USERNAME:-memu}
       - CALDAV_PASSWORD=${CALDAV_PASSWORD:-}
