chore: Update Ollama image to `latest` and adjust recommended model name in `.env.example`.

--- a/.env.example
+++ b/.env.example
@@ -23,7 +23,7 @@ SYNAPSE_REPORT_STATS=no
 AI_ENABLED=true
 # Model selection - Ministral 3B recommended for better quality at similar resource cost
 # Options: ministral:3b (recommended), llama3.2, phi3:mini, gemma2:2b
-OLLAMA_MODEL=ministral:3b
+OLLAMA_MODEL=ministral-3:3b
 
 # Controls how many ML models run in parallel (Keep at 1 for low-RAM devices)
 MACHINE_LEARNING_WORKERS=1
