feat: Implement morning briefing agent with calendar, weather, news, and memory integration, and add new web administration interface.

--- a/.env.example
+++ b/.env.example
@@ -33,6 +33,36 @@ MACHINE_LEARNING_WORKER_TIMEOUT=120
 MATRIX_BOT_USERNAME=@memu_bot:memu.local
 MATRIX_BOT_TOKEN=
 
+# --- CALENDAR (Baikal CalDAV) ---
+# After setup, complete Baikal's wizard at http://<server>/calendar/
+# Then create a user in Baikal's admin and enter credentials here.
+CALDAV_URL=http://calendar/dav.php
+CALDAV_USERNAME=memu
+CALDAV_PASSWORD=
+
+# --- WEATHER (Morning Briefing) ---
+# Free API key from https://openweathermap.org/api (Current Weather)
+WEATHER_API_KEY=
+# Your city and country code (e.g., Manchester,UK or Birmingham,UK)
+WEATHER_CITY=London
+WEATHER_COUNTRY=UK
+
+# --- MORNING BRIEFING ---
+BRIEFING_ENABLED=true
+BRIEFING_TIME=07:00
+# The Matrix room ID to deliver briefings to (e.g., !abc123:yourserver.memu.digital)
+PRIMARY_ROOM_ID=
+
+# --- NEWS FEEDS (Morning Briefing) ---
+# Comma-separated RSS feed URLs. Defaults to BBC UK + Tech news.
+# Add your own: tech, industry, local news, etc.
+# Examples:
+#   https://hnrss.org/frontpage (Hacker News)
+#   https://www.theguardian.com/uk/rss (Guardian UK)
+#   https://feeds.feedburner.com/TechCrunch (TechCrunch)
+BRIEFING_NEWS_FEEDS=https://feeds.bbci.co.uk/news/uk/rss.xml,https://feeds.bbci.co.uk/news/technology/rss.xml
+BRIEFING_NEWS_COUNT=5
+
 # --- REMOTE ACCESS ---
 # Get a key from https://login.tailscale.com/admin/settings/keys
 TAILSCALE_AUTH_KEY=
