--- a/nginx/templates/default.conf.template
+++ b/nginx/templates/default.conf.template
@@ -10,6 +10,15 @@ server {
         add_header Cache-Control "public, immutable";
     }
 
+    # === Admin & Setup Routes (Bootstrap Service) ===
+    location ~ ^/(admin|login|logout|welcome|api|status|static) {
+        set $upstream_bootstrap http://bootstrap:8888;
+        proxy_pass $upstream_bootstrap;
+        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Host $host;
+    }
+
     # Matrix Client API
     location /_matrix {
         proxy_pass http://synapse:8008;
@@ -30,8 +39,9 @@ server {
 
     # Calendar (Baikal CalDAV)
     location /calendar/ {
+        set $upstream_calendar http://calendar:80;
         rewrite ^/calendar(/.*)$ $1 break;
-        proxy_pass http://calendar:80;
+        proxy_pass $upstream_calendar;
         proxy_set_header X-Forwarded-For $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Host $host;
@@ -47,11 +57,24 @@ server {
         return 301 $scheme://$host/calendar/dav.php;
     }
 
-    # Element Web (Chat UI)
+    # Element Web / Cinny (Chat UI - Default Fallback)
     location / {
-        proxy_pass http://element:80;
+        set $upstream_element http://element:80;
+        proxy_pass $upstream_element;
         proxy_set_header X-Forwarded-For $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Host $host;
+    }
+
+    # Well-Known Discovery
+    location /.well-known/matrix/server {
+        return 200 '{"m.server": "${SERVER_NAME}:443"}';
+        add_header Content-Type application/json;
+    }
+
+    location /.well-known/matrix/client {
+        return 200 '{"m.homeserver": {"base_url": "https://${SERVER_NAME}"}}';
+        add_header Content-Type application/json;
+        add_header Access-Control-Allow-Origin *;
     }
 }
