--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,3 +1,9 @@
+map $http_x_forwarded_proto $forwarded_proto {
+    default $scheme;
+    https   https;
+    http    http;
+}
+
 server {
     listen 80;
     server_name localhost;
@@ -31,14 +37,21 @@ server {
     }
 
     # === Calendar (Baikal CalDAV) ===
+    # Supports WebDAV methods (PROPFIND, REPORT, MKCALENDAR, etc.) for DAVx5/iOS sync
     location /calendar/ {
         set $upstream_calendar http://calendar:80;
         rewrite ^/calendar(/.*)$ $1 break;
         proxy_pass $upstream_calendar;
         proxy_set_header X-Forwarded-For $remote_addr;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Proto $forwarded_proto;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
         proxy_set_header Host $host;
         client_max_body_size 50M;
+
+        # Rewrite Location headers from Baikal to match original client scheme
+        # (prevents HTTPS->HTTP redirect when accessed via Tailscale)
+        proxy_redirect http://$host $forwarded_proto://$host;
     }
 
     # CalDAV/CardDAV discovery (iOS, macOS, Thunderbird)
