--- a/nginx/templates/default.conf.template
+++ b/nginx/templates/default.conf.template
@@ -38,14 +38,24 @@ server {
     }
 
     # Calendar (Baikal CalDAV)
+    # Supports WebDAV methods (PROPFIND, REPORT, MKCALENDAR, etc.) for DAVx5/iOS sync
     location /calendar/ {
         set $upstream_calendar http://calendar:80;
         rewrite ^/calendar(/.*)$ $1 break;
         proxy_pass $upstream_calendar;
         proxy_set_header X-Forwarded-For $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
         proxy_set_header Host $host;
         client_max_body_size 50M;
+
+        # Pass through all WebDAV/CalDAV methods
+        proxy_pass_request_headers on;
+
+        # Rewrite any Location headers Baikal sends back
+        # (prevents HTTPS->HTTP redirect when accessed via Tailscale)
+        proxy_redirect http://$host https://$host;
     }
 
     # CalDAV/CardDAV discovery
