--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -42,16 +42,36 @@ server {
         set $upstream_calendar http://calendar:80;
         rewrite ^/calendar(/.*)$ $1 break;
         proxy_pass $upstream_calendar;
+
+        # Rewrite redirects from upstream to add /calendar/ prefix
+        proxy_redirect ~^(https?://[^/]+)/(.*) $1/calendar/$2;
+        proxy_redirect / /calendar/;
+        proxy_redirect http://$host/ $forwarded_proto://$host/calendar/;
+        proxy_redirect https://$host/ $forwarded_proto://$host/calendar/;
+
+        # Rewrite HTML link targets (for Baikal admin UI)
+        sub_filter 'href="/' 'href="/calendar/';
+        sub_filter 'src="/' 'src="/calendar/';
+        sub_filter 'action="/' 'action="/calendar/';
+        sub_filter 'url("/' 'url("/calendar/';
+        sub_filter 'url(/' 'url(/calendar/';
+
+        # Rewrite CalDAV XML response bodies (critical for DAVx5/iOS sync)
+        # Baikal returns <d:href>/dav.php/calendars/...</d:href> without /calendar/ prefix.
+        # DAVx5 follows these paths literally, missing the /calendar/ location block.
+        sub_filter '>/dav.php/' '>/calendar/dav.php/';
+        sub_filter '>/card.php/' '>/calendar/card.php/';
+
+        sub_filter_once off;
+        sub_filter_types text/css text/javascript application/javascript text/xml application/xml text/html;
+
+        proxy_set_header Accept-Encoding "";
         proxy_set_header X-Forwarded-For $remote_addr;
         proxy_set_header X-Forwarded-Proto $forwarded_proto;
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Port $server_port;
         proxy_set_header Host $host;
         client_max_body_size 50M;
-
-        # Rewrite Location headers from Baikal to match original client scheme
-        # (prevents HTTPS->HTTP redirect when accessed via Tailscale)
-        proxy_redirect http://$host $forwarded_proto://$host;
     }
 
     # CalDAV/CardDAV discovery (iOS, macOS, Thunderbird)
