fix: use regex location for CalDAV proxy to reliably strip /calendar/ prefix

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -38,10 +38,11 @@ server {
 
     # === Calendar (Baikal CalDAV) ===
     # Supports WebDAV methods (PROPFIND, REPORT, MKCALENDAR, etc.) for DAVx5/iOS sync
-    location /calendar/ {
+    # Uses regex location to reliably strip /calendar/ prefix via captured group $1.
+    # NOTE: rewrite + variable proxy_pass silently fails to strip the prefix.
+    location ~ ^/calendar(/.*)$ {
         set $upstream_calendar http://calendar:80;
-        rewrite ^/calendar(/.*)$ $1 break;
-        proxy_pass $upstream_calendar;
+        proxy_pass $upstream_calendar$1;
 
         # Rewrite redirects from upstream to add /calendar/ prefix
         proxy_redirect ~^(https?://[^/]+)/(.*) $1/calendar/$2;
