--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -50,27 +50,39 @@ server {
         proxy_redirect http://$host/ $forwarded_proto://$host/calendar/;
         proxy_redirect https://$host/ $forwarded_proto://$host/calendar/;
 
-        # Rewrite HTML link targets (for Baikal admin UI)
         sub_filter 'href="/' 'href="/calendar/';
         sub_filter 'src="/' 'src="/calendar/';
         sub_filter 'action="/' 'action="/calendar/';
-        sub_filter 'url("/' 'url("/calendar/';
-        sub_filter 'url(/' 'url(/calendar/';
-
-        # Rewrite CalDAV XML response bodies (critical for DAVx5/iOS sync)
-        # Baikal returns <d:href>/dav.php/calendars/...</d:href> without /calendar/ prefix.
-        # DAVx5 follows these paths literally, missing the /calendar/ location block.
-        sub_filter '>/dav.php/' '>/calendar/dav.php/';
-        sub_filter '>/card.php/' '>/calendar/card.php/';
-
         sub_filter_once off;
-        sub_filter_types text/css text/javascript application/javascript text/xml application/xml text/html;
+        sub_filter_types text/css text/html;
 
         proxy_set_header Accept-Encoding "";
         proxy_set_header X-Forwarded-For $remote_addr;
         proxy_set_header X-Forwarded-Proto $forwarded_proto;
         proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Port $server_port;
+        proxy_set_header Host $host;
+        client_max_body_size 50M;
+    }
+
+    # === CalDAV/CardDAV direct paths ===
+    # Baikal returns hrefs like /dav.php/calendars/... in XML responses.
+    # DAVx5/iOS follow these paths AND echo them in request bodies.
+    # These MUST route to Baikal directly (no path rewriting) so SabreDAV
+    # sees matching URIs in both the request path and request body.
+    location /dav.php/ {
+        set $upstream_calendar http://calendar:80;
+        proxy_pass $upstream_calendar;
+        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_set_header X-Forwarded-Proto $forwarded_proto;
+        proxy_set_header Host $host;
+        client_max_body_size 50M;
+    }
+
+    location /card.php/ {
+        set $upstream_calendar http://calendar:80;
+        proxy_pass $upstream_calendar;
+        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_set_header X-Forwarded-Proto $forwarded_proto;
         proxy_set_header Host $host;
         client_max_body_size 50M;
     }
